# realtime-sensor-actuator

./: .gitignore  COPILOT_REQUIREMENTS.md  Cargo.toml  README.md
.copilot/: requirements.json
benches/: system_benchmark.rs
config/: system_config.toml
scripts/: verify.sh
src/: actuator.rs  config.rs  ipc.rs  lib.rs  main.rs  metrics.rs  sensor.rs
src/actuator/: controller.rs  manager.rs  mod.rs
src/async_impl/: actuator_task.rs  mod.rs  sensor_task.rs
src/benchmark/: analysis.rs  metrics.rs  mod.rs
src/ipc/: channels.rs  mod.rs  shared_resource.rs
src/sensor/: anomaly.rs  filter.rs  generator.rs  mod.rs
src/threaded_impl/: actuator_thread.rs  mod.rs  sensor_thread.rs
src/visualization/: dashboard.rs  mod.rs
tests/: fault_injection_test.rs  integration_test.rs
