[package]
name = "realtime-sensor-actuator"
version = "0.1.0"
edition = "2021"
description = "Real-time sensor-actuator system with deadline tracking"

[dependencies]
# Threading and concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Random number generation
rand = "0.8"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Statistics
hdrhistogram = "7.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "system_benchmark"
harness = false

[profile.release]
opt-level = 3
